--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sweetalert2": "^11.0.18",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
@@ -27,8 +28,8 @@
       "react-app",
       "react-app/jest"
     ],
-    "rules" : {
-        "react-hooks/exhaustive-deps": "off"
+    "rules": {
+      "react-hooks/exhaustive-deps": "off"
     }
   },
   "browserslist": {
